--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ gems:
 ############
 language: en
 url: "https://mcomisso.github.io"
-
+title: "Matteo Comisso"
 author:
   name: "Matteo Comisso"
   email: "matteo.comisso@me.com"
