--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,27 @@ author:
       username: "@mcomisso"
       url: "https://medium.com/@mcomisso"
 
+#Projects Data
+projects:
+  past:
+    -
+      name: "Blue-Mate"
+      site: "/"
+      description: "Startup focused on iBeacon, restaurants and proximity marketing campaigns."
+    -
+      name: "Rocks Today"
+      site: ""
+      description: ""
+  current:
+    -
+      name: "Personal Blog"
+      site: ""
+      description: "This very blog. Built with Jekyll, material design lite and hosted on Github Pages."
+    -
+      name: "Architectures"
+      site: ""
+      description: "Exploring different mobile application architectures."
+
 # Permalinks
 permalink: /:year/:month/:day/:title
 paginate_path: "/blog/page:num/"
