--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ permalink: /:year/:month/:day/:title
 paginate_path: "/blog/page:num/"
 paginate: 5
 
+excerpt_separator: <!--more-->
 
 ###############
 # Site params #
