--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ gems:
 - jekyll-redirect-from
 - jekyll-sitemap
 - jekyll-feed
-
 - jekyll-paginate
+- jekyll-gist
 
 ############
 # Generics #
@@ -96,10 +96,7 @@ defaults:
       layout: "post"
       comments: "true"
 
-version:
-  maj: 0
-  min: 0
-  build: 1
+version: 0.0.1
 
 # Files to exclude, generic
 exclude:
