--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ projects:
   current:
     -
       name: "Personal Blog"
-      site: ""
-      description: "This very blog. Built with Jekyll, material design lite and hosted on Github Pages."
+      site: "https://mcomisso.github.io"
+      description: "This site. Built with Jekyll, material design lite and hosted on Github Pages."
     -
       name: "Architectures"
       site: ""
