--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,11 @@ author:
       username: "@mcomisso"
       url: "https://medium.com/@mcomisso"
 
+############
+# SEO PLUGIN
+twitter:
+  author: teomatteo89
+
 #Projects Data
 projects:
   past:
