--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ gems:
 # Generics #
 ############
 language: en
-url: "https://mcomisso.github.io"
+url: "http://mcomisso.xyz"
 title: "Matteo Comisso"
 
 author:
