--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ gems:
 - jekyll-sitemap
 - jekyll-feed
 - jekyll-paginate
-- jekyll-mentions
-- jemoji
+# jekyll-mentions
+# jemoji
 
 # jekyll-seo-tag
 # jekyll-gist
