--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ about:
       url: "https://github.com/mcomisso"
     -
       name: "twitter"
-      username: "@teomatteo89"
+      username: "teomatteo89"
       url: "https://twitter.com/teomatteo89"
     -
       name: "facebook"
@@ -56,7 +56,7 @@ about:
       url: "https://plus.google.com/u/0/+Matteocomisso"
     -
       name: "medium"
-      username: "@mcomisso"
+      username: "mcomisso"
       url: "https://medium.com/@mcomisso"
 
 #Projects Data
