--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ gems:
   - jekyll-redirect-from
   - jekyll-sitemap
   - jekyll-feed
+  - jekyll-gist
   - jekyll-paginate
   - jekyll-seo-tag
   - jekyll-mentions
