--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,6 +4,10 @@ past:
     name: "Blue-Mate"
     site: "/projects/blue-mate"
     description: "Startup focused on iBeacon, restaurants and proximity marketing campaigns."
+  -
+    name: "Kiwi app"
+    site: "/projects/kiwi"
+    description: "A branch of Blue-mate, show-casing the potentiality of "
 current:
   -
     name: "Personal Site"
