--- a/_data/works.yml
+++ b/_data/works.yml
@@ -23,4 +23,4 @@
   name: "Iper"
   url: "http://www.iper.it/landing_app_iper.php"
   description: "Coupon module. Find and use coupons to get exclusive discounts."
-  icon: "/images/apps/"
+  icon: "/images/apps/Iper.png"
