--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-language: ruby
+language: node_js
 rvm:
-  - 2.1.7
+  - 2.3.1
+before-script:
+  - npm install -g bower
+  - gem install bundler
 script:
+  - bower install
   - bundle exec jekyll build
 cache: bundler
 sudo: false
