--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
-language: ruby
-rvm:
-  - 2.3.1
-before-script:
-  - npm install -g bower
-  - bower install
+language: node_js
+node_js:
+  - "6"
+
+before-install:
+  - ruby --version
+install:
   - rvm install 2.3.1
-  - gem install bundler github-pages
+  - gem install bundler
+  - npm install -g bower
+
+before-script:  
+  - bundle install
+  
 script: 
   - bundle exec jekyll build
+  # - bundle exec htmlproofer
+
 cache: bundler
 sudo: false
 addons:
