--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.1",
-    "material-design-lite": "mdl#^1.2.1"
+    "material-design-lite": "mdl#^1.2.1",
+    "jspdf": "^1.3.4"
   }
 }
