Updated description of vouchercodes

--- a/_data/works.yml
+++ b/_data/works.yml
@@ -33,5 +33,5 @@
 -
   name: "VoucherCodes.co.uk"
   url: "https://vouchercodes.co.uk"
-  description: ""
+  description: "VoucherCodes is a leading UK savings destination that brings together vouchers, deals and sales for thousands of leading stores."
   icon: "/images/apps/VC.png"
