renamed gems to plugins

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ##################
 # Active plugins #
 ##################
-gems:
+plugins:
   - jekyll-redirect-from
   - jekyll-sitemap
   - jekyll-feed
