Remove footer and menu

--- a/_data/github.yml
+++ b/_data/github.yml
@@ -2,4 +2,4 @@
 -
   name: "📳 SQFeedbackGenerator"
   url: "https://github.com/mcomisso/SQFeedbackGenerator"
-  description: "Easy haptic feedback on iPhone 6S generation devices"
+  description: "Easy haptic feedback for iPhone 6S and 6S+"
