--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,15 @@ url: "http://mcomisso.me"
 title: "Matteo Comisso"
 email: matteo.comisso@me.com
 description: >- # this means to ignore newlines until "baseurl:"
+  iOS software developer living in London. 
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://mcomisso.me"
+url: http://mcomisso.me
 twitter_username: teomatteo89
 github_username:  mcomisso
+social_username: teomatteo89
 
 ############
 # SEO SPECIFIC
@@ -46,7 +48,6 @@ about:
   name: "Matteo Comisso"
   email: "matteo.comisso@me.com"
   uri: "https://twitter.com/teomatteo89"
-  avatar: "/assets/img/m-icon-white-on-blue.png"
   bio: ""
   services:
     -
@@ -84,6 +85,7 @@ kramdown:
   auto_ids: true
 
 theme: minima
+theme_color: red
 
 highlighter: rouge
 
@@ -95,9 +97,6 @@ defaults:
     values:
       layout: "post"
       comments: "true"
-
-version: 0.0.1
-mdlversion: 1.3.0
 
 # Files to exclude, generic
 exclude:
@@ -112,3 +111,5 @@ exclude:
   - Gruntfile.js
   - vendor
   - bower.json
+  - post.py
+  - keybase.txt
