--- a/_config.yml
+++ b/_config.yml
@@ -20,18 +20,14 @@ plugins:
 ############
 language: en
 url: "http://mcomisso.me"
-title: "Matteo Comisso"
-email: matteo.comisso@me.com
-description: >- # this means to ignore newlines until "baseurl:"
-  iOS software developer living in London. 
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Matteo Comisso
+email: me@mcomisso.me
+description: >
+  A small collection of thoughts, ideas and software experiments from an iOS software developer perspective.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: http://mcomisso.me
 twitter_username: teomatteo89
 github_username:  mcomisso
-social_username: teomatteo89
 
 ############
 # SEO SPECIFIC
@@ -46,7 +42,7 @@ social:
 
 about:
   name: "Matteo Comisso"
-  email: "matteo.comisso@me.com"
+  email: "me@mcomisso.me"
   uri: "https://twitter.com/teomatteo89"
   bio: ""
   services:
@@ -84,8 +80,7 @@ kramdown:
   input: GFM
   auto_ids: true
 
-theme: jekyll-swiss
-theme_color: blue
+theme: minima
 
 highlighter: rouge
 
