--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true 
 
-- script:
+script:
   - bundle exec gem update
   - bundle exec gem build
   - bundle exec htmlproofer ./_site --disable-external
