Fix: linked url now working, reco app takes to reco page, added vinyly

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ about:
       url: "https://facebook.com/100003457918621"
     -
       name: "linkedin" 
-      url: "https://linkedin.com/mcomisso"
+      url: "https://www.linkedin.com/in/mcomisso/"
     -
       name: "keybase"
       url: https://keybase.io/mcomisso
