--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: matteo@mcomisso.me
 description: >
   A small collection of thoughts, ideas and software experiments from an iOS software developer perspective.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: http://mcomisso.me
+url: https://mcomisso.me
 twitter_username: comismatt
 github_username:  mcomisso
 
