--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,9 @@ about:
       name: "twitter"
       url: "https://twitter.com/comismatt"
     -
+      name: "mastodon"
+      url: "https://mastodon.social/teomatteo89"
+    -
       name: "facebook"
       url: "https://facebook.com/100003457918621"
     -
